fixhed resume selected resume item spacing

--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -26,3 +26,11 @@
         text-shadow: 5px 5px 15px var(--grey);
     }
 }
+
+.resume-item-skills-and-technologies{
+    max-width: 20em;
+}
+
+.resume-item-education{
+    max-width: 25em;
+}
